--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "npm"
   ],
   "author": "Julius Gromyko <JuliusGromyko@gmail.com> (http://gromy.co)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "lodash": "4.17.4",
+    "mailcomposer": "4.0.1",
+    "vash": "0.12.2"
+  }
 }
